tests-build/tests/fail/macros_type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/fail/macros_type_mismatch.rs:5:5
  |
5 |     Ok(())
  |     ^^^^^^ expected `()`, found `Result<(), _>`
  |
  = note: expected unit type `()`
                  found enum `Result<(), _>`
help: a return type might be missing here
  |
4 | async fn missing_semicolon_or_return_type() -> _ {
  |                                             ++++
help: consider using `Result::expect` to unwrap the `Result<(), _>` value, panicking if the value is a `Result::Err`
  |
5 |     Ok(()).expect("REASON")
  |           +++++++++++++++++

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:10:5
   |
10 |     return Ok(());
   |     ^^^^^^^^^^^^^ expected `()`, found `Result<(), _>`
   |
   = note: expected unit type `()`
                   found enum `Result<(), _>`
help: a return type might be missing here
   |
9  | async fn missing_return_type() -> _ {
   |                                ++++
help: consider using `Result::expect` to unwrap the `Result<(), _>` value, panicking if the value is a `Result::Err`
   |
10 |     return Ok(()).expect("REASON");
   |                  +++++++++++++++++

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:15:5
   |
14 | async fn extra_semicolon() -> Result<(), ()> {
   |                               -------------- expected `Result<(), ()>` because of return type
15 |     Ok(());
   |     ^^^^^^ expected `Result<(), ()>`, found `()`
   |
   = note:   expected enum `Result<(), ()>`
           found unit type `()`
help: try wrapping the expression in a variant of `Result`
   |
15 |     Ok(Ok(()));
   |     +++      +
15 |     Err(Ok(()));
   |     ++++      +

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:20:5
   |
19 | async fn invalid_return_type() -> Option<()> {
   |                                   ---------- expected `Option<()>` because of return type
20 |     ()
   |     ^^ expected `Option<()>`, found `()`
   |
   = note:   expected enum `Option<()>`
           found unit type `()`
help: try wrapping the expression in `Some`
   |
20 |     Some(())
   |     +++++  +

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:28:5
   |
27 | async fn issue_4635() {
   |                      - help: try adding a return type: `-> i32`
28 |     return 1;
   |     ^^^^^^^^ expected `()`, found integer
